--- a/lesson_32_react/src/StoreCard/StoreCard.css
+++ b/lesson_32_react/src/StoreCard/StoreCard.css
@@ -1,3 +1,7 @@
 .store-card {
-    border: 1px solid red;
+    border: 1px solid green;
+}
+
+.store-card--not-available {
+    border-color: red;
 }
